Opened 12 years ago

Closed 12 years ago

#1260 closed defect (fixed)

vf negate: crash 2

Reported by: ami_stuff Owned by:
Priority: important Component: ffmpeg
Version: git-master Keywords: negate dr1
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description

(gdb) r -i AVI-CVID_MP3.avi -vf negate -an -vcodec msmpeg4v2 out.avi
Starting program: d:\mingw\msys\1.0\ffmpeg-head-7432bcf\ffmpeg_g.exe -i AVI-CVID
_MP3.avi -vf negate -an -vcodec msmpeg4v2 out.avi
[New Thread 776.0xcb0]
ffmpeg version 0.10.2.git-7432bcf Copyright (c) 2000-2012 the FFmpeg developers
  built on Apr 15 2012 01:02:52 with gcc 4.6.1
  configuration: --disable-ffprobe
  libavutil      51. 46.100 / 51. 46.100
  libavcodec     54. 14.101 / 54. 14.101
  libavformat    54.  3.100 / 54.  3.100
  libavdevice    53.  4.100 / 53.  4.100
  libavfilter     2. 70.100 /  2. 70.100
  libswscale      2.  1.100 /  2.  1.100
  libswresample   0. 11.100 /  0. 11.100
Input #0, avi, from 'AVI-CVID_MP3.avi':
  Duration: 00:00:05.95, start: 0.000000, bitrate: 1435 kb/s
    Stream #0:0: Video: cinepak (cvid / 0x64697663), yuv420p, 192x128, 24 fps, 2
4 tbr, 24 tbn, 24 tbc
    Stream #0:1: Audio: mp3 (U[0][0][0] / 0x0055), 11025 Hz, mono, s16, 8 kb/s
File 'out.avi' already exists. Overwrite ? [y/N] y
w:192 h:128 pixfmt:yuv420p tb:1/1000000 sar:0/1 sws_param:flags=2
Output #0, avi, to 'out.avi':
  Metadata:
    ISFT            : Lavf54.3.100
    Stream #0:0: Video: msmpeg4v2 (MP42 / 0x3234504D), yuv420p, 192x128, q=2-31,
 200 kb/s, 24 tbn, 24 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (cinepak -> msmpeg4v2)
Press [q] to stop, [?] for help

Program received signal SIGSEGV, Segmentation fault.
draw_slice (inlink=0x39e3d60, y=0, h=128, slice_dir=1)
    at libavfilter/vf_lut.c:339
339                         outrow[j] = tab[inrow[j]];
(gdb) bt
#0  draw_slice (inlink=0x39e3d60, y=0, h=128, slice_dir=1)
    at libavfilter/vf_lut.c:339
#1  0x00417c38 in avfilter_draw_slice (link=0x39e3d60, y=0, h=128,
    slice_dir=1) at libavfilter/avfilter.c:662
#2  0x0041859a in request_frame (link=0x39e3d60)
    at libavfilter/vsrc_buffer.c:259
#3  0x004170c1 in avfilter_request_frame (link=0x39e3e40)
    at libavfilter/avfilter.c:541
#4  0x00418fe2 in av_buffersink_get_buffer_ref (ctx=0x39e33a0,
    bufref=0x22e90c, flags=0) at libavfilter/sink_buffer.c:129
#5  0x004082bb in transcode_video (pkt_pts=<optimized out>,
    got_output=<optimized out>, pkt=<optimized out>, ist=<optimized out>)
    at ffmpeg.c:2189
#6  output_packet (ist=0x39e2940, ost_table=0x39e2e00, nb_ostreams=1,
    pkt=0x22fbf0) at ffmpeg.c:2292
#7  0x0040ca68 in transcode (output_files=0x39e2fa0, nb_output_files=1,
    input_files=0x39e2a60, nb_input_files=1) at ffmpeg.c:3163
#8  0x0022ff48 in ?? ()
Backtrace stopped: Not enough registers or memory available to unwind further

Attachments (1)

AVI-CVID_MP3.avi (1.0 MB ) - added by ami_stuff 12 years ago.

Download all attachments as: .zip

Change History (3)

by ami_stuff, 12 years ago

Attachment: AVI-CVID_MP3.avi added

comment:1 by Carl Eugen Hoyos, 12 years ago

Component: undeterminedavfilter
Keywords: negate added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Summary: vf nagate: crash 2vf negate: crash 2
Version: unspecifiedgit-master

comment:2 by Michael Niedermayer, 12 years ago

Component: avfilterFFmpeg
Keywords: dr1 added
Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.