ffmpeg: preserve NULL ptrs in get_buffer()

Fixes Ticket1260, Ticket1267

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>